# realtime-recommendation-engine

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  HANDOFF.md
scripts/: generate_data.py  train_models.py
src/api/: main.py  schemas.py
src/config/: settings.py
src/data/: __init__.py  generator.py  schemas.py  store.py
src/evaluation/: __init__.py  metrics.py  offline_eval.py
src/models/: __init__.py  collaborative.py  content_based.py  hybrid.py  popular.py
src/serving/: __init__.py  ab_test.py  cache.py  ranker.py  realtime.py
src/utils/: logging.py
tests/: conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_ab_test.py  test_cache.py  test_collaborative.py  test_content_based.py  test_hybrid.py  test_metrics.py  test_popular.py  test_ranker.py  test_realtime.py  test_store.py
